--- a/updates.html
+++ b/updates.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Updates</title>
+  <title>News & Updates</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>News & Updates</h1>
+  <a href="index.html" class="button">Back to Home</a>
 
-  <!-- Admin post form -->
-  <div id="postForm" style="display:none; margin-bottom:20px;">
-    <input id="updateTitle" type="text" placeholder="Title" style="width:100%; margin-bottom:10px;">
-    <textarea id="updateContent" placeholder="Write your update..." style="width:100%; height:100px;"></textarea>
-    <button id="addUpdateBtn" class="button">Post Update</button>
+  <!-- Post form (Admin only) -->
+  <div id="postForm" style="display:none; margin-top:20px;">
+    <textarea id="updateText" placeholder="Write your update..." rows="4" style="width:90%; max-width:600px;"></textarea>
+    <br>
+    <button id="postUpdateBtn" class="button">Post Update</button>
   </div>
 
-  <!-- Updates feed -->
-  <div id="updatesFeed"></div>
+  <!-- Updates Feed -->
+  <div id="updatesFeed" style="margin-top:30px; max-width:700px; margin-left:auto; margin-right:auto; text-align:left;"></div>
 
-  <script src="main.js"></script>
+  <script src="updates.js"></script>
 </body>
 </html>
