--- a/updates.html
+++ b/updates.html
@@ -2,23 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>News & Updates</title>
+  <title>Updates</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Updates Timeline Styles */
+    .updates-container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px;
+      background: #111;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(255, 102, 0, 0.5);
+    }
+    .update {
+      border-left: 3px solid #ff6600;
+      margin: 20px 0;
+      padding-left: 15px;
+    }
+    .update h3 {
+      color: #ff6600;
+      margin: 0;
+    }
+    .update p {
+      margin: 5px 0;
+    }
+    .update small {
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-  <h1>News & Updates</h1>
-  <a href="index.html" class="button">Back to Home</a>
+  <header>
+    <h1>Latest Updates</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="news.html">News</a>
+      <a href="music.html">Music</a>
+      <a href="updates.html">Updates</a>
+      <a href="about.html">About</a>
+      <a href="profile.html">Profile</a>
+      <a href="admin.html">Admin</a>
+    </nav>
+  </header>
 
-  <!-- Post form (Admin only) -->
-  <div id="postForm" style="display:none; margin-top:20px;">
-    <textarea id="updateText" placeholder="Write your update..." rows="4" style="width:90%; max-width:600px;"></textarea>
-    <br>
-    <button id="postUpdateBtn" class="button">Post Update</button>
-  </div>
+  <main>
+    <div class="updates-container">
+      <div class="update">
+        <h3>Streaming Feature Added</h3>
+        <small>Sept 24, 2025</small>
+        <p>Members and Admin can now start/stop streams, save recordings, and manage them directly in the news feed.</p>
+      </div>
 
-  <!-- Updates Feed -->
-  <div id="updatesFeed" style="margin-top:30px; max-width:700px; margin-left:auto; margin-right:auto; text-align:left;"></div>
+      <div class="update">
+        <h3>Music Visualizer Online</h3>
+        <small>Sept 22, 2025</small>
+        <p>Electric-style music player added to <a href="music.html">Music Page</a>. Supports uploads and live visualization.</p>
+      </div>
 
-  <script src="updates.js"></script>
+      <div class="update">
+        <h3>Admin System Secured</h3>
+        <small>Sept 20, 2025</small>
+        <p>Admin panel now password protected. Nev123 is set as the temporary admin key.</p>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
