--- a/updates.html
+++ b/updates.html
@@ -6,185 +6,106 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Site Updates</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="news.html">News</a>
-      <a href="music.html">Music</a>
-      <a href="updates.html">Updates</a>
-      <a href="about.html">About</a>
-      <a href="profile.html">Profile</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-  </header>
+  <h1>Grove Updates</h1>
 
-  <main>
-    <!-- Admin Post Form -->
-    <div id="postForm" style="display:none; margin:20px 0;">
-      <h2>Create New Update</h2>
-      <input type="text" id="postTitle" placeholder="Title" style="width:100%; margin-bottom:10px;">
-      <textarea id="postContent" placeholder="Write your update..." style="width:100%; height:100px; margin-bottom:10px;"></textarea>
-      <button id="submitPost">Post Update</button>
-    </div>
+  <!-- Post Form -->
+  <div id="postForm" style="display:none;">
+    <h2>New Update</h2>
+    <input type="text" id="updateTitle" placeholder="Title" required><br><br>
+    <textarea id="updateContent" placeholder="Your update..." required></textarea><br><br>
+    <button id="postUpdate">Post</button>
+  </div>
 
-    <!-- Updates Feed -->
-    <h2>Recent Updates</h2>
-    <div id="updatesFeed"></div>
-  </main>
+  <!-- Updates Feed -->
+  <div id="updatesFeed"></div>
 
   <script>
-    const ADMIN_PASSWORD = "Nev123";
-    let role = localStorage.getItem("userRole") || "guest";
-
-    if(role !== "member") {
-      const input = prompt("Enter Admin password (leave empty if guest):");
-      if(input === ADMIN_PASSWORD) role = "admin";
-      else if(input) role = "member";
-      else role = "guest";
-      localStorage.setItem("userRole", role);
-    }
+    const role = localStorage.getItem("userRole"); // "admin" or "member"
+    const loggedInUser = localStorage.getItem("loggedInUser") || "Guest";
 
     const postForm = document.getElementById("postForm");
-    const postTitle = document.getElementById("postTitle");
-    const postContent = document.getElementById("postContent");
-    const submitPost = document.getElementById("submitPost");
     const updatesFeed = document.getElementById("updatesFeed");
 
+    // Show post form for members and admin
+    if(role === "admin" || role === "member") postForm.style.display = "block";
+
+    // Load updates
     let updates = JSON.parse(localStorage.getItem("updates") || "[]");
-
-    if(role === "admin") {
-      postForm.style.display = "block";
-    }
-
-    function saveUpdates() {
-      localStorage.setItem("updates", JSON.stringify(updates));
-    }
 
     function renderUpdates() {
       updatesFeed.innerHTML = "";
-      updates.forEach(update => {
-        const postEl = document.createElement("div");
-        postEl.className = "updatePost";
-        postEl.style.border = "1px solid #555";
-        postEl.style.padding = "10px";
-        postEl.style.marginBottom = "15px";
-        postEl.style.borderRadius = "8px";
-
-        // Post header
-        postEl.innerHTML = `
+      // Sort pinned first
+      const sorted = updates.sort((a,b) => (b.pinned ? 1 : 0) - (a.pinned ? 1 : 0));
+      sorted.forEach(update => {
+        const div = document.createElement("div");
+        div.className = "update";
+        div.innerHTML = `
           <h3>${update.title}</h3>
           <p>${update.content}</p>
-          <small>Posted: ${update.timestamp}</small><br>
-          <button class="likeBtn">❤️ ${update.likes || 0}</button>
+          <small>By: ${update.author} | ${update.timestamp}</small><br>
+          Likes: <span>${update.likes}</span>
+          <button class="likeBtn" data-id="${update.id}">Like</button>
+          <button class="commentBtn" data-id="${update.id}">Comment</button>
+          ${role === "admin" ? `<button class="deleteBtn" data-id="${update.id}">Delete</button>
+          <button class="pinBtn" data-id="${update.id}">${update.pinned ? "Unpin" : "Pin"}</button>` : ""}
+          <div class="comments" id="comments-${update.id}"></div>
+          <hr>
         `;
+        updatesFeed.appendChild(div);
 
-        // Admin controls
-        if(role === "admin") {
-          const adminControls = document.createElement("div");
-          adminControls.innerHTML = `
-            <button class="deleteBtn">Delete</button>
-          `;
-          postEl.appendChild(adminControls);
-
-          adminControls.querySelector(".deleteBtn").addEventListener("click", () => {
-            if(confirm("Delete this post?")) {
-              updates = updates.filter(p => p.id !== update.id);
-              saveUpdates();
-              renderUpdates();
-            }
-          });
-        }
-
-        // Like button
-        postEl.querySelector(".likeBtn").addEventListener("click", () => {
-          update.likes = (update.likes || 0) + 1;
-          saveUpdates();
-          renderUpdates();
+        // Render comments
+        const commentsDiv = document.getElementById(`comments-${update.id}`);
+        update.comments.forEach(c => {
+          const cDiv = document.createElement("div");
+          cDiv.innerText = `${c.author}: ${c.text}`;
+          commentsDiv.appendChild(cDiv);
         });
-
-        // Comments section
-        const commentsSection = document.createElement("div");
-        commentsSection.style.marginTop = "10px";
-        commentsSection.innerHTML = `
-          <h4>Comments</h4>
-          <ul class="commentsList" style="list-style:none; padding:0;"></ul>
-          <textarea class="commentInput" placeholder="Write a comment..." style="width:100%; height:50px; margin-top:5px;"></textarea>
-          <button class="commentBtn">Comment</button>
-        `;
-        postEl.appendChild(commentsSection);
-
-        const commentsList = commentsSection.querySelector(".commentsList");
-
-        // Render comments (pinned first)
-        const sortedComments = (update.comments || []).sort((a,b) => b.pinned - a.pinned);
-        sortedComments.forEach(comment => {
-          const li = document.createElement("li");
-          li.style.marginBottom = "5px";
-          li.innerHTML = `
-            ${comment.pinned ? "📌 " : ""}<strong>${comment.user}:</strong> ${comment.text}
-          `;
-
-          // Admin pin/unpin
-          if(role === "admin") {
-            const pinBtn = document.createElement("button");
-            pinBtn.textContent = comment.pinned ? "Unpin" : "Pin";
-            pinBtn.style.marginLeft = "10px";
-            pinBtn.addEventListener("click", () => {
-              comment.pinned = !comment.pinned;
-              saveUpdates();
-              renderUpdates();
-            });
-            li.appendChild(pinBtn);
-          }
-
-          commentsList.appendChild(li);
-        });
-
-        // Add comment
-        commentsSection.querySelector(".commentBtn").addEventListener("click", () => {
-          const input = commentsSection.querySelector(".commentInput");
-          const text = input.value.trim();
-          if(text) {
-            const newComment = {
-              id: Date.now(),
-              user: role === "admin" ? "Admin" : "Guest",
-              text,
-              pinned: false
-            };
-            update.comments = update.comments || [];
-            update.comments.push(newComment);
-            input.value = "";
-            saveUpdates();
-            renderUpdates();
-          }
-        });
-
-        updatesFeed.appendChild(postEl);
       });
     }
 
-    submitPost.addEventListener("click", () => {
-      const title = postTitle.value.trim();
-      const content = postContent.value.trim();
-      if(title && content) {
-        const newUpdate = {
-          id: Date.now(),
-          title,
-          content,
-          timestamp: new Date().toLocaleString(),
-          likes: 0,
-          comments: []
-        };
-        updates.unshift(newUpdate);
-        postTitle.value = "";
-        postContent.value = "";
-        saveUpdates();
-        renderUpdates();
-      }
+    renderUpdates();
+
+    // Posting new update
+    document.getElementById("postUpdate").addEventListener("click", () => {
+      const title = document.getElementById("updateTitle").value.trim();
+      const content = document.getElementById("updateContent").value.trim();
+      if(!title || !content) return alert("Title and content required");
+
+      const newUpdate = {
+        id: Date.now(),
+        title,
+        content,
+        author: role === "admin" ? "Admin" : loggedInUser,
+        timestamp: new Date().toLocaleString(),
+        likes: 0,
+        comments: [],
+        pinned: false
+      };
+      updates.unshift(newUpdate);
+      localStorage.setItem("updates", JSON.stringify(updates));
+      renderUpdates();
     });
 
-    renderUpdates();
+    // Like, comment, delete, pin
+    updatesFeed.addEventListener("click", e => {
+      const id = e.target.dataset.id;
+      if(!id) return;
+      const update = updates.find(u => u.id == id);
+
+      if(e.target.classList.contains("likeBtn")) {
+        update.likes++;
+      } else if(e.target.classList.contains("commentBtn")) {
+        const text = prompt("Comment:");
+        if(text) update.comments.push({author: loggedInUser, text});
+      } else if(e.target.classList.contains("deleteBtn") && role === "admin") {
+        updates = updates.filter(u => u.id != id);
+      } else if(e.target.classList.contains("pinBtn") && role === "admin") {
+        update.pinned = !update.pinned;
+      }
+
+      localStorage.setItem("updates", JSON.stringify(updates));
+      renderUpdates();
+    });
   </script>
 </body>
 </html>
