--- a/projects.html
+++ b/projects.html
@@ -2,37 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nev's Projects</title>
+  <title>Profile</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Profile</h1>
+  <p>Username: <span id="profileName"></span></p>
+  <h2>Your Posts</h2>
+  <div id="profilePosts"></div>
 
-<!-- ==================== CHUNK 1 ==================== -->
-<h1>Projects</h1>
-<p>This page highlights Nev’s creative endeavors, including projects, experiments, and portfolio items. Content will be curated and expanded as work progresses, showcasing your vision and innovation.</p>
-<!-- FAT NOTE: End of CHUNK 1. Next chunk goes below -->
+  <script>
+    const username = localStorage.getItem("loggedInUser") || "Guest";
+    document.getElementById("profileName").innerText = username;
 
+    const updates = JSON.parse(localStorage.getItem("updates") || "[]");
+    const profilePostsDiv = document.getElementById("profilePosts");
 
+    const userPosts = updates.filter(u => u.author === username);
+    if(userPosts.length === 0) profilePostsDiv.innerText = "No posts yet.";
 
-<!-- ==================== CHUNK 2 ==================== -->
-<a href="admin.html" class="button">Return to Admin</a>
-<!-- FAT NOTE: End of CHUNK 2. New chunks go above </body> -->
-
-
-
-<!-- ==================== CHUNK 3 ==================== -->
-<!-- Grove-coded internal notes (for developer only) -->
-<!--
-  Mikasa: Maintains readable page layout
-  Power: Tracks upcoming project sections
-  Himeno: Notes for future interactive elements
-  Armin: Ensures page chunk structure
-  Yūrei: Records professional guidance and placeholders
-  Grove Reminder: Future project content should be added as new chunks above </body>
--->
-<!-- FAT NOTE: End of CHUNK 3. New chunks go above </body> -->
-
-
-
+    userPosts.forEach(update => {
+      const div = document.createElement("div");
+      div.innerHTML = `
+        <h3>${update.title}</h3>
+        <p>${update.content}</p>
+        <small>Posted: ${update.timestamp}</small>
+        <hr>
+      `;
+      profilePostsDiv.appendChild(div);
+    });
+  </script>
 </body>
 </html>
