--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Profile</h1>
+  <h1>Member Profile</h1>
   <p>Username: <span id="profileName"></span></p>
   <h2>Your Posts</h2>
   <div id="profilePosts"></div>
